feat(landing-page): add detail info and remove text typing

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-r from-slate-500 to-slate-900">
+<body class="bg-gradient-to-r from-slate-700 to-slate-900" onload="typeIntro()">
   <div>
     <div class="flex justify-center">
         <div class="pt-5">
-          <img src="img/nuzululhuda.jpeg" class="w-40 shadow-2xl rounded-full">
+          <img src="img/nuzululhuda.jpeg" class="w-60 shadow-2xl rounded-full">
+          <p class="text-white pt-5 text-xl">Hi, I am Nuzulul Huda 👋</p>
+          <p class="text-white pt-2 text-md">Software engineer based in Malang, Indonesia.</p>
+          <p class="text-white pt-2 text-md">Currently interested in cloud engineering</p>
         </div>
     </div>
   </div>
