feat(landing-page): add typing on content

--- a/index.html
+++ b/index.html
@@ -6,15 +6,41 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-r from-slate-700 to-slate-900" onload="typeIntro()">
-  <div>
-    <div class="flex justify-center">
-        <div class="pt-5">
-          <img src="img/nuzululhuda.jpeg" class="w-60 shadow-2xl rounded-full">
-          <p class="text-white pt-5 text-xl">Hi, I am Nuzulul Huda 👋</p>
-          <p class="text-white pt-2 text-md">Software engineer based in Malang, Indonesia.</p>
-          <p class="text-white pt-2 text-md">Currently interested in cloud engineering</p>
-        </div>
-    </div>
+  <div class="flex justify-center">
+    <img src="img/nuzululhuda.jpeg" class="w-40 shadow-2xl rounded-full">
+  </div>
+  <div class="flex justify-center">
+      <div class="pt-5">
+        <p class="text-white pt-5 text-xl" id="intro"></p>
+        <p class="text-white pt-2 text-md break-words whitespace-pre-line" id="detail"></p>
+      </div>
   </div>
 </body>
+<script>
+let txtIntro = 'Hi, I am Nuzulul Huda 👋'
+let txtDetail = 'Software engineer based in Malang, Indonesia 🇮🇩 \n Currently interested in cloud engineering'
+const speed = 50;
+  
+let i = 0;
+function typeIntro() {
+  if (i < txtIntro.length) {
+    document.getElementById("intro").innerHTML += txtIntro.charAt(i);
+    i++;
+    setTimeout(typeIntro, speed);
+  } else {
+    typeDetail()
+  }
+}
+
+let j = 0;
+function typeDetail() {
+  if (j < txtDetail.length) {
+    document.getElementById("detail").innerHTML += txtDetail.charAt(j);
+    j++;
+    setTimeout(typeDetail, speed);
+  } 
+}
+
+
+</script>
 </html>
